making task based demos